--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                       href="#home"
                       class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70"
                     >
-                      Home
+                      首页
                     </a>
                   </li>
                   <li class="group relative">
@@ -73,7 +73,7 @@
                       href="#about"
                       class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
                     >
-                      About
+                      关于
                     </a>
                   </li>
                   <li class="group relative">
@@ -81,7 +81,7 @@
                       href="#pricing"
                       class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
                     >
-                      Pricing
+                      产品
                     </a>
                   </li>
                   <li class="group relative">
@@ -89,7 +89,7 @@
                       href="#team"
                       class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
                     >
-                      Team
+                      团队
                     </a>
                   </li>
                   <li class="group relative">
@@ -97,89 +97,8 @@
                       href="#contact"
                       class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
                     >
-                      Contact
+                      联系我们
                     </a>
-                  </li>
-                  <li class="group relative">
-                    <a
-                      href="blog-grids.html"
-                      class="ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
-                    >
-                      Blog
-                    </a>
-                  </li>
-                  <li class="submenu-item group relative">
-                    <a
-                      href="javascript:void(0)"
-                      class="relative mx-8 flex items-center justify-between py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-8 lg:mr-0 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10"
-                    >
-                      Pages
-
-                      <svg
-                        class="ml-2 fill-current"
-                        width="16"
-                        height="20"
-                        viewBox="0 0 16 20"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M7.99999 14.9C7.84999 14.9 7.72499 14.85 7.59999 14.75L1.84999 9.10005C1.62499 8.87505 1.62499 8.52505 1.84999 8.30005C2.07499 8.07505 2.42499 8.07505 2.64999 8.30005L7.99999 13.525L13.35 8.25005C13.575 8.02505 13.925 8.02505 14.15 8.25005C14.375 8.47505 14.375 8.82505 14.15 9.05005L8.39999 14.7C8.27499 14.825 8.14999 14.9 7.99999 14.9Z"
-                        />
-                      </svg>
-                    </a>
-                    <div
-                      class="submenu relative left-0 top-full hidden w-[250px] rounded-sm bg-white p-4 transition-[top] duration-300 group-hover:opacity-100 dark:bg-dark-2 lg:invisible lg:absolute lg:top-[110%] lg:block lg:opacity-0 lg:shadow-lg lg:group-hover:visible lg:group-hover:top-full"
-                    >
-                      <a
-                        href="about.html"
-                        class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                      >
-                        About Page
-                      </a>
-                      <a
-                        href="pricing.html"
-                        class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                      >
-                        Pricing Page
-                      </a>
-                      <a
-                        href="contact.html"
-                        class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                      >
-                        Contact Page
-                      </a>
-                      <a
-                        href="blog-grids.html"
-                        class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                      >
-                        Blog Grid Page
-                      </a>
-                      <a
-                        href="blog-details.html"
-                        class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                      >
-                        Blog Details Page
-                      </a>
-                      <a
-                        href="signup.html"
-                        class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                      >
-                        Sign Up Page
-                      </a>
-                      <a
-                        href="signin.html"
-                        class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                      >
-                        Sign In Page
-                      </a>
-                      <a
-                        href="404.html"
-                        class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                      >
-                        404 Page
-                      </a>
-                    </div>
                   </li>
                 </ul>
               </nav>
@@ -257,7 +176,7 @@
                   </svg>
                 </span>
               </label>
-              <div class="hidden sm:flex">
+              <!-- <div class="hidden sm:flex">
                 <a
                   href="signin.html"
                   class="loginBtn px-[22px] py-2 text-base font-medium text-white hover:opacity-70"
@@ -269,7 +188,7 @@
                   class="signUpBtn rounded-md bg-white bg-opacity-20 px-6 py-2 text-base font-medium text-white duration-300 ease-in-out hover:bg-opacity-100 hover:text-dark"
                 >
                   Sign Up
-                </a>
+                </a> -->
               </div>
             </div>
           </div>
@@ -3503,12 +3422,12 @@
           <div class="w-full px-4">
             <div class="mx-auto mb-[60px] max-w-[485px] text-center">
               <span class="mb-2 block text-lg font-semibold text-primary">
-                Our Team Members
+                团队成员
               </span>
               <h2
                 class="mb-3 text-3xl font-bold leading-[1.2] text-dark dark:text-white sm:text-4xl md:text-[40px]"
               >
-                Our Creative Team
+                创意团队
               </h2>
               <p class="text-base text-body-color dark:text-dark-6">
                 There are many variations of passages of Lorem Ipsum available
@@ -4592,12 +4511,12 @@
                 <span
                   class="mb-6 block text-base font-medium text-dark dark:text-white"
                 >
-                  CONTACT US
+                  联系我们
                 </span>
                 <h2
                   class="max-w-[260px] text-[35px] font-semibold leading-[1.14] text-dark dark:text-white"
                 >
-                  Let's talk about your problem.
+                  我们一起成长，共同进步。
                 </h2>
               </div>
               <div class="mb-12 flex flex-wrap justify-between lg:mb-0">
@@ -4621,10 +4540,10 @@
                     <h5
                       class="mb-[18px] text-lg font-semibold text-dark dark:text-white"
                     >
-                      Our Location
+                      我们的地址
                     </h5>
                     <p class="text-base text-body-color dark:text-dark-6">
-                      401 Broadway, 24th Floor, Orchard Cloud View, London
+                      深圳市宝安区西乡街道富华社区宝运达研发综合楼2楼A18
                     </p>
                   </div>
                 </div>
@@ -4645,14 +4564,14 @@
                     <h5
                       class="mb-[18px] text-lg font-semibold text-dark dark:text-white"
                     >
-                      How Can We Help?
+                      电子邮件
                     </h5>
                     <p class="text-base text-body-color dark:text-dark-6">
-                      info@yourdomain.com
+                      sales@phitontop.cn
                     </p>
-                    <p class="mt-1 text-base text-body-color dark:text-dark-6">
+                    <!-- <p class="mt-1 text-base text-body-color dark:text-dark-6">
                       contact@yourdomain.com
-                    </p>
+                    </p> -->
                   </div>
                 </div>
               </div>
@@ -4705,7 +4624,7 @@
                   <input
                     type="text"
                     name="phone"
-                    placeholder="+885 1254 5211 552"
+                    placeholder="+86 125 4521 1552"
                     class="w-full border-0 border-b border-[#f1f1f1] bg-transparent pb-3 text-body-color placeholder:text-body-color/60 focus:border-primary focus:outline-none dark:border-dark-3 dark:text-dark-6"
                   />
                 </div>
@@ -4723,12 +4642,12 @@
                   ></textarea>
                 </div>
                 <div class="mb-0">
-                  <button
+                  <!-- <button
                     type="submit"
                     class="inline-flex items-center justify-center rounded-md bg-primary px-10 py-3 text-base font-medium text-white transition duration-300 ease-in-out hover:bg-blue-dark"
                   >
                     Send
-                  </button>
+                  </button> -->
                 </div>
               </form>
             </div>
@@ -5401,7 +5320,7 @@
     <!-- ====== Back To Top End -->
 
     <!-- ====== Made With Button Start -->
-    <a
+    <!-- <a
       target="_blank"
       rel="nofollow noopener"
       class="fixed bottom-8 left-4 z-[999] inline-flex items-center gap-[10px] rounded-lg bg-white px-[14px] py-2 shadow-2 dark:bg-dark-2 sm:left-9"
@@ -5423,7 +5342,7 @@
           class="hidden dark:block"
         />
       </span>
-    </a>
+    </a> -->
     <!-- ====== Made With Button End -->
 
     <!-- ====== All Scripts -->
