--- a/index.html
+++ b/index.html
@@ -3005,10 +3005,11 @@
                   class="-mx-3 flex items-center justify-center md:justify-start"
                 >
                   <a
-                    href="javascript:void(0)"
+                    href="https://beian.miit.gov.cn/"
+                    target="_blank"
                     class="px-3 text-base text-gray-7 hover:text-white hover:underline"
                   >
-                    粤ICP备2022004393号
+                    粤ICP备2024244795号-1
                   </a>
                   <a
                     href="javascript:void(0)"
@@ -3016,12 +3017,12 @@
                   >
                     
                   </a>
-                  <a
+                  <!-- <a
                     href="javascript:void(0)"
                     class="px-3 text-base text-gray-7 hover:text-white hover:underline"
                   >
                     粤公安网备 1234567890
-                  </a>
+                  </a> -->
                 </div>
               </div>
             </div>
