--- a/index.html
+++ b/index.html
@@ -2847,8 +2847,14 @@
               <h3
                 class="mb-8 text-2xl font-semibold text-dark dark:text-white md:text-[28px] md:leading-[1.42]"
               >
-                期待您的光临
+                欢迎来电咨询
               </h3>
+              <div class="mb-[22px]">
+                <label
+                  for="phone"
+                  class="mb-4 block text-sm text-body-color dark:text-dark-6"
+                  >+86 158 8976 5532</label>
+              </div>
             </div>
           </div>
         </div>
